--- a/StreetSmartAPI/Demo.WinForms/Properties/Resources.resx
+++ b/StreetSmartAPI/Demo.WinForms/Properties/Resources.resx
@@ -117,4 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="apiKey" xml:space="preserve">
+    <value>6vEZuXUl6PQRiPkp-XwROvENWPk56fA5-_wNKHEVSrQFifU5ebcd-PUFqfABOnAZ</value>
+  </data>
+  <data name="locale" xml:space="preserve">
+    <value>en-US</value>
+  </data>
+  <data name="password" xml:space="preserve">
+    <value>MJUygv01</value>
+  </data>
+  <data name="srs" xml:space="preserve">
+    <value>EPSG:28992</value>
+  </data>
+  <data name="username" xml:space="preserve">
+    <value>hbr</value>
+  </data>
 </root>
