--- a/StreetSmartAPI/Demo.WinForms/Properties/Resources.resx
+++ b/StreetSmartAPI/Demo.WinForms/Properties/Resources.resx
@@ -124,12 +124,12 @@
     <value>en-US</value>
   </data>
   <data name="password" xml:space="preserve">
-    <value>MJUygv01</value>
+    <value />
   </data>
   <data name="srs" xml:space="preserve">
     <value>EPSG:28992</value>
   </data>
   <data name="username" xml:space="preserve">
-    <value>hbr</value>
+    <value />
   </data>
 </root>
