--- a/StreetSmartAPI/StreetSmart.WinForms/ToDo.txt
+++ b/StreetSmartAPI/StreetSmart.WinForms/ToDo.txt
@@ -9,7 +9,7 @@
 	- WPF API
 	- DOM style uitbreiden (+ testen demo app uitbreiden)
 	- Commentaar uitbreiden van interface / factory / exceptions / enums objecten
-
+	- Documentatie van de API
 
 
 labs-api:
