--- a/StreetSmartAPI/StreetSmart.WinForms/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.WinForms/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="JsApi" xml:space="preserve">
+    <value>StreetSmartApi</value>
+  </data>
   <data name="StreetSmartLocation" xml:space="preserve">
     <value>https://streetsmart.cyclomedia.com/api/v16.1/api-dotnet.html</value>
   </data>
