updated todo document

--- a/StreetSmartAPI/StreetSmart.WinForms/ToDo.txt
+++ b/StreetSmartAPI/StreetSmart.WinForms/ToDo.txt
@@ -1,27 +1,5 @@
-﻿Aanpassen:
-- Vragen:
-	- EventViewerArgs, hoe invullen?
-	- EventTileLoadArgs, hoe invullen?
-	- Error message op een betere manier parsen uit het error bericht wat we terug krijgen van javascript
-- Refactoring:
+﻿- ToDo:
 	- Unit testen
 	- WPF API
-	- DOM style uitbreiden (+ testen demo app uitbreiden)
 	- Documentatie / code voorbeelden van de API
 	- Nuget package
-
-
-labs-api:
-https://labs.cyclomedia.com/streetsmart/api/api-dotnet.html
-
-prod-api:
-https://streetsmart.cyclomedia.com/api/v16.1/api-dotnet.html
-
-Na te vragen:
-	- Panorama viewer openen met opties, is dat mogelijk?
-	- Met welke queries kun je een panorama viewer openen?
-
-
-
-- Extra opties zoals openen oblique of starten meting toevoegen
-- Testen vanaf de labs
