- Added events:   - viewer Added   - viewer removed

--- a/DemoAPI/Demo.WinForms/Properties/Resources.resx
+++ b/DemoAPI/Demo.WinForms/Properties/Resources.resx
@@ -123,4 +123,7 @@
   <data name="srs" xml:space="preserve">
     <value>EPSG:28992</value>
   </data>
+  <data name="StreetSmartLocation" xml:space="preserve">
+    <value>http://localhost:8081/api-dotnet.html</value>
+  </data>
 </root>
