--- a/DemoAPI/Demo.WinForms/Properties/Resources.resx
+++ b/DemoAPI/Demo.WinForms/Properties/Resources.resx
@@ -126,4 +126,7 @@
   <data name="StreetSmartLocation" xml:space="preserve">
     <value>https://labs.cyclomedia.com/streetsmart-api/branch/develop/api-dotnet.html</value>
   </data>
+  <data name="maxWindows" xml:space="preserve">
+    <value>3</value>
+  </data>
 </root>
