Updated: - some documentation - now removes the returns from the sld string

--- a/DemoAPI/Demo.WinForms/Properties/Resources.resx
+++ b/DemoAPI/Demo.WinForms/Properties/Resources.resx
@@ -124,7 +124,7 @@
     <value>EPSG:28992</value>
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
-    <value>https://labs.cyclomedia.com/streetsmart-api/branch/develop/api-dotnet.html</value>
+    <value />
   </data>
   <data name="maxWindows" xml:space="preserve">
     <value>3</value>
