--- a/StreetSmartAPI/StreetSmart.WinForms/ReleaseNotes.txt
+++ b/StreetSmartAPI/StreetSmart.WinForms/ReleaseNotes.txt
@@ -7,6 +7,7 @@ Version: 18.5.0
 - Removed the Copy_Link and Center_Map button in the oblique viewer and panorama viewer buttons
 - Added the toggle3D Cursor function in the Panorama viewer
 - Added the SetBrightness and the SetContrast functions in the panorama viewer and the oblique viewer
+// Todo: interface functie in het demo scherm voor toggle3D, SetBrightness en Contrast
 
 
 Version: 18.4.0
