--- a/DemoAPI/Demo.WinForms/Properties/Resources.resx
+++ b/DemoAPI/Demo.WinForms/Properties/Resources.resx
@@ -121,6 +121,6 @@
     <value>en-US</value>
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
-    <value />
+    <value>https://streetsmart-staging.cyclomedia.com/api/v18.5/api-dotnet.html</value>
   </data>
 </root>
