STREET-1040: Remove overlay is now awaited

--- a/StreetSmartAPI/StreetSmart.WinForms/ReleaseNotes.txt
+++ b/StreetSmartAPI/StreetSmart.WinForms/ReleaseNotes.txt
@@ -6,6 +6,7 @@ Version: 18.7.0
 - Bug fixed: crashed on .GetRecording() with images from 2008
 - GetActiveMeasurement: returns now an object structure
 - The measurement changed event, returns now an object structure
+- Remove overlay function is now awaited
 
 
 Version: 18.5.0
