--- a/StreetSmartAPI/MultipleAPICreation/Properties/Resources.resx
+++ b/StreetSmartAPI/MultipleAPICreation/Properties/Resources.resx
@@ -117,10 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="locale" xml:space="preserve">
-    <value>en-US</value>
+  <data name="APIKey" xml:space="preserve">
+    <value />
   </data>
-  <data name="StreetSmartLocation" xml:space="preserve">
+  <data name="Password" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Username" xml:space="preserve">
     <value />
   </data>
 </root>
