--- a/StreetSmartAPI/StreetSmart.WinForms/ReleaseNotes.txt
+++ b/StreetSmartAPI/StreetSmart.WinForms/ReleaseNotes.txt
@@ -11,6 +11,7 @@ Version: 18.7.0
 - Added a function for close a viewer by Id: CloseViewer(viewerId)
 - Added a function for get the opened viewers: getViewers()
 - Fixed bug: when setting a viewer to not be closeable, button still appears
+- Fixed: now multiple API creation and initialization support
 
 
 Version: 18.5.0
@@ -20,7 +21,7 @@ Version: 18.5.0
 - Added the toggle3D Cursor and get3DCursor visible functions in the Panorama viewer
 - Added the SetBrightness and the SetContrast functions in the panorama viewer and the oblique viewer
 - Improved parsing SLD, now you don't have to escape characters
-- Added set Active measurment: ToDo: add it possible for create a GeoJSON object and parse this object to this function
+- Added set Active measurment function: ToDo: add it possible for create a GeoJSON object and parse this object to this function
 
 
 Version: 18.4.0
