--- a/StreetSmartAPI/StreetSmart.API/WinForms/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BrowserSubprocess" xml:space="preserve">
+    <value>CefSharp.BrowserSubprocess.exe</value>
+  </data>
   <data name="JsApi" xml:space="preserve">
     <value>StreetSmartApi</value>
   </data>
