--- a/StreetSmartAPI/StreetSmart.WPF.Example/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/Properties/Resources.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ApiKey" xml:space="preserve">
-    <value>abc</value>
+    <value />
   </data>
   <data name="Password" xml:space="preserve">
-    <value>MJUygv01</value>
+    <value />
   </data>
   <data name="Username" xml:space="preserve">
-    <value>hbr</value>
+    <value />
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
     <value>https://streetsmart.cyclomedia.com/api/v18.4/api-dotnet.html</value>
