--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,6 +1,11 @@
 ﻿Release notes:
 ==============
 
+Version: 18.11.1
+================
+- LookAtCoordinate function is now awaited
+
+
 Version: 18.11.0
 ================
 - Fixed: Make the API thread safe
