--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,9 +1,11 @@
 ﻿Release notes:
 ==============
 
-Version: 18.11.1
+Version: 18.11.3
 ================
 - LookAtCoordinate function is now awaited
+- Exception message if you try to call a viewer which no longer exists
+- Destroy function is now awaited
 
 
 Version: 18.11.0
