--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,11 +1,12 @@
 ﻿Release notes:
 ==============
 
-Version: 18.11.3
+Version: 18.11.4
 ================
 - LookAtCoordinate function is now awaited
 - Exception message if you try to call a viewer which no longer exists
 - Destroy function is now awaited
+- fixed: getAPIReady state, incase of API isn't ready, now returns false in case of a crash
 
 
 Version: 18.11.0
