--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,12 +1,13 @@
 ﻿Release notes:
 ==============
 
-Version: 18.11.4
+Version: 18.11.5
 ================
 - LookAtCoordinate function is now awaited
 - Exception message if you try to call a viewer which no longer exists
 - Destroy function is now awaited
 - fixed: getAPIReady state, incase of API isn't ready, now returns false in case of a crash
+- wait time for getViewers is now 1 second, no infinite wait time
 
 
 Version: 18.11.0
