Added function for restart the Street Smart viewer in WPF

--- a/StreetSmartAPI/StreetSmart.WPF.Example/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/Properties/Resources.resx
@@ -127,6 +127,6 @@
     <value />
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
-    <value />
+    <value>https://streetsmart.cyclomedia.com/api/v18.10/api-dotnet.html</value>
   </data>
 </root>
