Updated WPF example

--- a/StreetSmartAPI/StreetSmart.WPF.Example/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/Properties/Resources.resx
@@ -127,6 +127,9 @@
     <value />
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
-    <value>https://streetsmart.cyclomedia.com/api/v18.10/api-dotnet.html</value>
+    <value>http://localinstallation.cyclomedia.com/streetsmart/v18.1/api/api-dotnet.html</value>
+  </data>
+  <data name="ConfigurationUrl" xml:space="preserve">
+    <value>http://localinstallation.cyclomedia.com:8080/configuration</value>
   </data>
 </root>
