--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -4,11 +4,13 @@
 Version: 18.14.0
 ================
 - Refactor some code
-- Added Constructing of SLD objects
+- Added Code for Constructing SLD objects
 - Added a API Settings class
-- Added in the API Settings class functionalities for location of the GPU Cache and the disabling of the GPU cash
+- Added in the API Settings class functionalities for location of the GPU Cache and the disabling of the GPU cache
 - Added functions in the viewer objects: (IViewer / IPanoramaViewer / IObliqueViewer): GetType(), SaveImage(), ToggleOverlay()
 - Added function to the obliqueViewer: SwitchViewingDirection()
+- Added to the obliwue and the panorama viewer buttons list: SAVE_IMAGE
+- Added properties to the panoramaViewerOptions: MeasureTypeButtonVisible, MeasureTypeButtonToggle, MeasureTypeButtonStart
 
 
 Version: 18.13.0
