--- a/StreetSmartAPI/StreetSmart.WinForms.Multiple/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.WinForms.Multiple/Properties/Resources.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="APIKey" xml:space="preserve">
-    <value></value>
+    <value />
   </data>
   <data name="Password" xml:space="preserve">
-    <value></value>
+    <value />
   </data>
   <data name="Username" xml:space="preserve">
-    <value></value>
+    <value />
   </data>
 </root>
