--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -5,6 +5,7 @@ Version: 18.15.2
 ================
 - Created methods for create point, lineString and polygons in a geoJson
 - Create a clone function for clone the FeatureCollection
+- Fixed several small bugs
 
 
 Version: 18.15.1
