--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -7,6 +7,7 @@ Version: 19.1.0
 - Created methods for create point, lineString and polygons in a geoJson
 - Create a clone function for clone the FeatureCollection
 - Fixed several small bugs
+- Fixed: white screen after close measurement, close viewer
 
 
 Version: 18.15.1
