STREET-1884: Solved stability issues in the API

--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -4,6 +4,7 @@
 Version: 19.4.0
 ===============
 - SLD parsing: External Graphic / InlineContent as base64 string
+- Solved stability issues
 
 
 Version: 19.3.0
