--- a/StreetSmartAPI/StreetSmart.API/WinForms/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/Properties/Resources.resx
@@ -130,6 +130,6 @@
     <value />
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
-    <value>https://streetsmart-staging.cyclomedia.com/api/v19.7/api-dotnet.html</value>
+    <value>https://streetsmart.cyclomedia.com/api/v19.7/api-dotnet.html</value>
   </data>
 </root>
