--- a/StreetSmartAPI/StreetSmart.API/WinForms/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/Properties/Resources.resx
@@ -130,6 +130,7 @@
     <value />
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
-    <value>https://streetsmart.cyclomedia.com/api/v19.6/api-dotnet.html</value>
+    <value>https://streetsmart.cyclomedia.com/api/v19.6/api-dotnet.htm</value>
+    <comment>l</comment>
   </data>
 </root>
